java 21 and Spring Boot 3.4.2